--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,4 +21,23 @@ networks:
           ports:
             - 27017:27017
         
-        
+        mongo-express:
+            container_name: mongo-express
+            image: mongo-express
+            restart: unless-stopped
+
+            ports: 8081:8081
+            environment:
+                ME_CONFIG_MONGODB_SERVER: mongodb
+                ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
+                ME_CONFIG_MONGODB_ADMINUSERNAME: root
+                ME_CONFIG_MONGODB_ADMINPASSWORD: example
+                ME_CONFIG_BASICAUTH_USERNAME: admin
+                ME_CONFIG_BASICAUTH_PASSWORD: admin123
+            volumes:
+            - mongodb-data:/data/db
+            depends_on:
+                - mongodb
+              networks:
+                - mongodb_network     
+            
